# StreetChase

./: .clang-format  .gitignore  .gitmodules  AnimationClass.hpp  AnimationRenderClass.hpp  BackgroundClass.hpp  BulletClass.hpp  CMakeLists.txt  ChooseDevice.cpp  ChooseDevice.hpp  Chrono.cpp  Chrono.hpp  Chronos.sln  Chronos.vcxproj  Chronos.vcxproj.filters  EnemyClass.hpp  HUDClass.hpp  HealthBarClass.cpp  HealthClass.hpp  MenuClass.hpp  PersonClass.cpp  PhysicsClass.hpp  PlayerClass.hpp  RenderClass.hpp  TextClass.hpp  Todo.txt  Vertex.hpp  WeaponClass.hpp  buffers.cpp  buffers.hpp  build.bat  circle.frag  commandbuffer.cpp  commandbuffer.hpp  commandpool.cpp  commandpool.hpp  compile.bat  compressTextures.bat  definitions.hpp  descriptorpool.cpp  (+30 more)
Art/Main Character/: final character.ai
Art/Main Character/AfterEffects/: animations.aep
Art/Main Character/AfterEffects/Adobe After Effects Auto-Save/: animations auto-save 3.aep  animations auto-save 4.aep  animations auto-save 5.aep  animations auto-save 6.aep  animations auto-save 7.aep  animations auto-save 8.aep
Assets/: example.astc  test.anim  test.skel  todo.txt
Assets/Source Files/: Police.aep  gc gang leader.ai  gc gang member.ai  gc- main charecter( hero).ai  gc- main charecter.ai  gc- police.ai  rahulvadhyar game over scrren.ai  rahulvadhyar_background.ai
Assets/Source Files/After Effects/: FinalBoss.aep  GangMember1.aep  GangMember2.aep  GangMember3.aep  police_running.aep
Assets/Source Files/After Effects/Adobe After Effects Auto-Save/: FinalBoss auto-save 1.aep  GangMember1 auto-save 1.aep  GangMember1 auto-save 2.aep  GangMember2 auto-save 1.aep  GangMember3 auto-save 1.aep  police_running auto-save 10.aep  police_running auto-save 11.aep  police_running auto-save 7.aep  police_running auto-save 8.aep  police_running auto-save 9.aep
Assets/Source Files/After Effects/FinalBoss.aep Logs/: AE 17-10-2023 22-16-30.txt
Assets/Source Files/After Effects/FinalBoss_AME/: tmpAEtoAMEProject-Walking.aep
Assets/Source Files/After Effects/GangMember1.aep Logs/: AE 17-10-2023 23-01-29.txt
Assets/Source Files/After Effects/GangMember2.aep Logs/: AE 17-10-2023 11-29-47 PM.txt
Assets/Source Files/After Effects/GangMember3.aep Logs/: AE 17-10-2023 11-50-59 PM.txt
Assets/Source Files/After Effects/police_running.aep Logs/: AE 16-10-2023 16-55-49.txt  AE 17-10-2023 22-28-46.txt
Assets/Source Files/Animate/FinalBoss/Ch Data/repo.noindex/: projectdata.rope
Assets/Source Files/Animate/FinalBoss/Ch Data/temp.noindex/WarpCache/: 0274b3aa-ffab-fa90-677e-984b000001bf  02f7ee56-257f-9f5e-e08a-ea0d000001bf  035178f6-777c-8e75-7afb-a940000001bf  (+122 more)
Assets/Source Files/Animate/GangMember1/Ch Data/repo.noindex/: projectdata.rope
Assets/Source Files/Animate/GangMember2/Ch Data/repo.noindex/: projectdata.rope
Assets/Source Files/Animate/GangMember3/Ch Data/repo.noindex/: projectdata.rope
Assets/Source Files/Illustrator/: FinalBoss.ai  GangMember1.ai  GangMember2.ai  GangMember3.ai  gc- police.ai  rahulvadhyar_object.ai
DataStructures/: DoublyLinkedList.hpp
LevelEditor/: LevelEditorClass.hpp  leveleditor.cpp  leveleditor_definitons.hpp
LevelFileSystem/: FileReader.cpp  FileWriter.cpp
Python/: imageOutline.cpp  imageOutline.py  vertices.txt
Shaders/: AnimationShader.fs  TextShader.fs  compile.bat  healthbar.fs  healthbar.vs  shader.frag  shader.fs  shader.vs  text.frag  text.vert  textFrag.spv  textVert.spv
Source/API/: manager.cpp  scene.cpp
Source/API/Source/: manager.cpp
Source/Animation/Headers/: animFileParser.hpp  animObject.hpp  animation.hpp
Source/Animation/Source/: animFileParser.cpp  animObject.cpp
Source/Editor/Source/: gui.cpp
Source/Engine/Header/: Vertex.hpp  buffers.hpp  engine.hpp  gui.hpp  vulkaninit.hpp
Source/Engine/Headers/: device.hpp  engine.hpp  helper.hpp  shape.hpp  shapeManager.hpp  structs.hpp  swapchain.hpp  text.hpp  vulkaninit.hpp
Source/Engine/Source/: buffers.cpp  device.cpp  engine.cpp  gui.cpp  helper.cpp  main.cpp  shape.cpp  shapeManager.cpp  swapchain.cpp  text.cpp  validation.cpp
Source/Header/: Chrono.hpp  device.hpp  gui.hpp  helper.hpp  shape.hpp  shapeManager.hpp  swapchain.hpp  text.hpp  texture.hpp  validation.hpp  vulkaninit.hpp
Source/Source/: Chrono.cpp  buffers.cpp  device.cpp  gui.cpp  helper.cpp  main.cpp  shape.cpp  shapeManager.cpp  swapchain.cpp  text.cpp  texture.cpp  validation.cpp
Tools/: TextureAtlasGen.py
Weapons/: simplebullet.hpp  simplegun.hpp
glad/: glad.c  glad.h
include/: chronos.hpp
test/: test.aep
test/Adobe After Effects Auto-Save/: test auto-save 2.aep  test auto-save 3.aep  test auto-save 4.aep  test auto-save 5.aep  test auto-save 6.aep
test/test_AME/: tmpAEtoAMEProject-final character 2.aep
(+1233 files in other folders)
